# PathWeaver

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE
.github/workflows/: bazel.yml
bazel_dependencies/: install_dependencies.bzl  load_repositories.bzl  load_repository_rules.bzl  maven_dependencies.bzl  maven_install.json
